--- a/Tribute Page/index.html
+++ b/Tribute Page/index.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Tribute Page</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <main id="main">
+      <header id="title">
+        <div id="title-div">
+          <h1>Dr. Norman Borlaug</h1>
+          <p>The man who saved a billion lives</p>
+        </div>
+
+        <figure id="img-div">
+          <img
+            id="image"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
+            alt="Dr. Norman Borlaug"
+          />
+          <figcaption id="img-caption">
+            Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+            on how to increase wheat yields - part of his life-long war on
+            hunger.
+          </figcaption>
+        </figure>
+
+        <section id="tribute-info">
+          <h3>Here's a time line of Dr. Borlaug's life:</h3>
+          <ul>
+            <li><strong>1914</strong> - Born in Cresco, Iowa</li>
+            <li>
+              <strong>1933</strong> - Leaves his family's farm to attend the
+              University of Minnesota, thanks to a Depression era program known
+              as the "National Youth Administration"
+            </li>
+            <li>
+              <strong>1935</strong> - Has to stop school and save up more money.
+              Works in the Civilian Conservation Corps, helping starving
+              Americans. "I saw how food changed them", he said.
+            </li>
+            <li>
+              <strong>1937</strong> - Finishes university and takes a job in the
+              US Forestry Service
+            </li>
+            <li>
+              <strong>1938</strong> - Marries wife of 69 years Margret Gibson.
+              Gets laid off due to budget cuts. Inspired by Elvin Charles
+              Stakman, he returns to school study under Stakman, who teaches him
+              about breeding new strains of plants.
+            </li>
+            <li>
+              <strong>1941</strong> - Takes a job in Mexico working with
+              farmers. Develops a strain of wheat that can grow in poor soil and
+              under bad weather conditions. It goes on to provide 95% of
+              Mexico's wheat.
+            </li>
+            <li>
+              <strong>1944</strong> - Released from the Navy, he takes a job in
+              Texas with the Rockefeller Foundation, working to develop
+              high-yield, disease-resistant wheat.
+            </li>
+            <li>
+              <strong>1964</strong> - Dr. Borlaug moves to India and Pakistan,
+              where he dramatically improves food production and prevents
+              famines.
+            </li>
+            <li><strong>1970</strong> - receives the Nobel Peace Prize</li>
+            <li>
+              <strong>1983</strong> - helps seven African countries dramatically
+              increase their maize and sorghum yields
+            </li>
+            <li>
+              <strong>1984</strong> - becomes a distinguished professor at Texas
+              A&M University
+            </li>
+            <li>
+              <strong>2005</strong> - states "we will have to double the world
+              food supply by 2050." Argues that genetically modified crops are
+              the only way we can meet the demand, as we run out of arable land.
+            </li>
+            <li><strong>2009</strong> - dies at the age of 95.</li>
+
+            <li>
+              <blockquote
+                cite="http://news.illinois.edu/news/09/0826borlaug_obit/SteveHladik"
+              >
+                "Borlaug's life and achievement are testimony to the
+                far-reaching contribution that one man's towering intellect,
+                persistence and scientific vision can make to human peace and
+                progress."
+              </blockquote>
+            </li>
+          </ul>
+        </section>
+
+        <h3>
+          If you have time, you should read more about this incredible human
+          being on his
+          <a
+            id="tribute-link"
+            href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+            target="_blank"
+            >Wikipedia entry</a
+          >.
+        </h3>
+      </header>
+    </main>
+  </body>
 </html>
